docs: worklog - fleet #129 analysis (oxygen fix validated: airGlitches -97.6%), statcarry, GC/pgrep flag chain